--- a/src/index.html
+++ b/src/index.html
@@ -3,21 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Filmoteka</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-<<<<<<< Updated upstream
-    <!-- <include src="./partials/example.html"></include> -->
+    <include src="./partials/loader.html"></include>
     <include src="./partials/header.html"></include>
-    <include src="./partials/main.html"></include>
-    <include src="./partials/footer.html"></include>
-=======
-    <include src="./partials/example.html"></include>
-    <include src="./partials/header.html"></include>
+    <include src="./partials/theme.html"></include>
+
+    <main></main>
     <include src="./partials/body.html"></include>
->>>>>>> Stashed changes
+    <include src="./partials/footer.html"></include>
+    <include src="./partials/modal.html"></include>
+
+    <include src="./partials/modalTrailer.html"></include>
+    <include src="./partials/scrolltop.html"></include>
   </body>
+  <script type="module" src="./index.js"></script>
+  <script type="module" src="./js/fetchfilm/index.js"></script>
+  <script type="module" src="./js/popular/popular.js"></script>
+
+  <script type="module" src="./js/openModal.js"></script>
+  <!-- <script type="module" src="./js/modalTrailer.js"></script>
+  <script type="module" src="./js/modalClose.js"></script> -->
+
+  <script type="module" src="./js/footer-modal-close.js"></script>
 </html>
