--- a/src/index.html
+++ b/src/index.html
@@ -32,12 +32,12 @@
     <include src="./partials/scrolltop.html"></include>
   </body>
   <script type="module" src="./index.js"></script>
-  <script type="module" src="./js/fetchfilm/index.js"></script>
-  <script type="module" src="./js/popular/popular.js"></script>
+  <!-- <script type="module" src="./js/fetchFilm.js"></script> -->
+  <!-- <script type="module" src="./js/popular.js"></script> -->
 
-  <script type="module" src="./js/openModal.js"></script>
+  <!-- <script type="module" src="./js/openModal.js"></script> -->
   <!-- <script type="module" src="./js/modalTrailer.js"></script>
   <script type="module" src="./js/modalClose.js"></script> -->
 
-  <script type="module" src="./js/footer-modal-close.js"></script>
+  <!-- <script type="module" src="./js/footer-modal-close.js"></script> -->
 </html>
